# nterm

./: MANIFEST.in  README.md  README_API_CLI.md  README_API_IPython.md  README_Backlog.md  README_REPL.md  example.py  nterm.py  pyproject.toml  tfsm_templates.db
nterm/: __init__.py  __main__.py  config.py  requirements.txt  resources.py  setup.py
nterm/askpass/: __init__.py  server.py
nterm/connection/: profile.py
nterm/examples/: basic_terminal.py
nterm/manager/: connect_dialog.py  io.py  models.py  settings.py  tree.py
nterm/parser/: api_help_dialog.py  ntc_download_dialog.py  tfsm_fire_tester.py
nterm/scripting/: __init__.py  api.py  cli.py  models.py  platform_data.py  platform_utils.py  repl.py  repl_interactive.py  ssh_connection.py  test_api_repl.py
nterm/session/: __init__.py  askpass_ssh.py  base.py  interactive_ssh.py  local_terminal.py  pty_transport.py  ssh.py
nterm/terminal/: __init__.py  bridge.py  widget.py
nterm/terminal/resources/: terminal.html  terminal.js
nterm/theme/: __init__.py  engine.py  stylesheet.py
nterm/theme/themes/: default.yaml  dracula.yaml  enterprise_dark.yaml  enterprise_hybrid.yaml  enterprise_light.yaml  gruvbox_dark.yaml  gruvbox_hybrid.yaml  gruvbox_light.yaml  nord_hybrid.yaml
nterm/vault/: credential_manager.py  keychain.py  manager_ui.py  requirements.txt  store.py
sample_scripts/: README_SCRIPTS.md  backup_configs.py  interface_errors.py  neighbor_discovery.py  read_env.py  version_audit.py
